# keypop-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
keypop/: __init__.py  commands.py  config.py  lib.py  main.py  storage.py
keypop/ui/: ui.py
tests/: test_lib.py
