[project]
name = "keypop"
version = "0.1.0"
description = "Simple CLI tool for storing and managing API keys"
readme = "README.md"
authors = [{name = "Egordudov"}]
classifiers = [
    "MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
keypop = "keypop.main:main"