[project]
name = "keypop"
version = "0.1.0"
description = "Simple CLI tool for storing and managing API keys"
readme = "README.md"
authors = [{name = "Egordudov", email = "egordudov@example.com"}]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Egor53510/keypop-cli"
Issues = "https://github.com/Egor53510/keypop-cli/issues"

[project.scripts]
keypop = "keypop.main:main"