[project]
name = "keypop"
version = "0.1.1"
description = "Simple CLI tool for storing and managing API keys"
readme = "README.md"
authors = [{name = "Egordudov", email = "egordudov@example.com"}]
license = "MIT"
requires-python = ">3.8"
keywords = [
    "api-key",
    "api-keys",
    "cli",
    "command-line",
    "credentials",
    "environment-variables",
    "secret-manager",
    "secrets",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Egor53510/keypop-cli"
Issues = "https://github.com/Egor53510/keypop-cli/issues"

[project.scripts]
keypop = "keypop.main:main"